Adding CSS to blog.

--- a/Cancer_Classication.ipynb
+++ b/Cancer_Classication.ipynb
@@ -7,8 +7,27 @@
    },
    "source": [
     "# Classification Models For Cancer Detection\n",
+    "--------------------------\n",
     "\n",
+    "## Contents\n",
+    "- [Introduction](#Introduction)\n",
+    "\n",
+    "- [Classes](#Classes)\n",
+    "\n",
+    "- [Data Cleaning](#Cleaning)\n",
+    "\n",
+    "- [Visualizing The Data](#Visualization)\n",
+    "\n",
+    "- [Modeling](#Modeling)\n",
+    "\n",
+    "- [Conclusion](#Conclusion)\n",
+    "\n",
+    "\n",
+    "The source code for this project can be found <a href=\"https://github.com/mdh266/Cancer_Detection\">here</a>\n",
+    "\n",
+    "--------------------------\n",
     "## Introduction\n",
+    "--------------------------\n",
     "\n",
     "The purpose of this blog post/notebook is to practice using classification models for cancer detection.  We will be working with breast tissue data provided by the University of California Irvine (UCI) Machine learning course which can be found <a href=\"https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/breast-cancer-wisconsin.data\"> here.</a>  The dataset contains a sampling of 699 patient cells for which we have the following features:\n",
     "\n",
@@ -72,7 +91,12 @@
     "I built three classes for this project that encapsulate all the methods and functionality that we use to analyze the data and develop classification models. Constructing these class was also nice because they can easily be altered for other projects which will save me development time later in the future.\n",
     " \n",
     "\n",
-    "The cancer_cell_data class obtains the cancer cell data from the UCI website and cleans it. It stores the cleaned data as a Pandas dataframe (df) as a member variable of the class_cell_data object.  The cancer_cell_data class also has a few of the pandas dataframe methods overloaded for convenience."
+    "The cancer_cell_data class obtains the cancer cell data from the UCI website and cleans it. It stores the cleaned data as a Pandas dataframe (df) as a member variable of the class_cell_data object.  The cancer_cell_data class also has a few of the pandas dataframe methods overloaded for convenience.\n",
+    "\n",
+    "\n",
+    "--------------------------\n",
+    "## Classes\n",
+    "--------------------------"
    ]
   },
   {
@@ -359,7 +383,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cleaning the data\n",
+    "--------------------------\n",
+    "## Cleaning\n",
+    "--------------------------\n",
+    "\n",
     "Now we can get to the progess of data wrangling and cleaning. We first instantiate a cancer_cell_data object that obtains and drops the column containing the id number."
    ]
   },
@@ -882,7 +909,9 @@
    "source": [
     "It seems now that all our rows and columns have values within the ranges described in the introduction and we are happy that our data is cleaned and in the correct format.  We can now move on to see what we can learn from the dataset through visualization.\n",
     "\n",
-    "## Visualizing the data\n",
+    "--------------------------\n",
+    "## Visualization\n",
+    "--------------------------\n",
     "\n",
     "Let's instantiate our visualization object:"
    ]
@@ -1117,7 +1146,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling\n",
+    "--------------------------\n",
+    "## Modeling\n",
+    "--------------------------\n",
+    "\n",
     "We now look into developing a model for a our data.  We first create a classifier object and then split our training data into training and test set."
    ]
   },
@@ -1137,7 +1169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistic Regression\n",
+    "### Logistic Regression\n",
     "The first classifier model that we can look into is logistic regression. Logistic regression is a simple, but robust model. While only works for data which is linearly seperable, it provides us with highly interable results. The coefficents for each feature variable can be interpreted as to how \"correlated\" the feature is to the cell class.   We call the function \"logistic_reg_model\" which fits our model to the training data, prints the 10-fold cross-validation accuracy as well as the coefficents for the model:"
    ]
   },
@@ -1233,7 +1265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistic Regression With l1 Regularization\n",
+    "### Logistic Regression With l1 Regularization\n",
     "\n",
     "Since the features are somewhat correlated we can look into using regularization to find which coefficients matter the most. We can do this with logistic regression.  Using l1 regularization performs feature selection on our model.  We perform 10-fold cross validation with a grid search for the optimal penalty parameter using logistic_reg_L1_penalty method.  We output the trainging accuracy and coefficents below:"
    ]
@@ -1337,17 +1369,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusion"
+    "--------------------------\n",
+    "## Conclusion\n",
+    "--------------------------\n",
+    "\n",
+    "In this notebook we have looked into using logistic regression with and without l1 regularization to classify breast tissue cells as normal or cancerous.  The dataset is pretty well separated so our models are performing very well and the use of more complicated non-linear models probably isnt necessary.  Our choice of logistic regression has the added benefit of being highly interpretablle.  Since we have over 90% accuracy, precission, recall and F1, it might not be worth the small added peformance of using a support vector machine or random forest classifier and lose the interperability of l."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "source": [
-    "In this notebook we have looked into using logistic regression with and without l1 regularization to classify breast tissue cells as normal or cancerous.  The dataset is pretty well separated so our models are performing very well and the use of more complicated non-linear models probably isnt necessary.  Our choice of logistic regression has the added benefit of being highly interpretablle.  Since we have over 90% accuracy, precission, recall and F1, it might not be worth the small added peformance of using a support vector machine or random forest classifier and lose the interperability of l."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
